# coding_interview_essentials

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  Readme.md  bitbucket-pipelines.yml  conversions_regexes_md_to_tex.txt  create_chapter_from_template.sh  monitor.sh  run_all_tests.sh  wait_build.sh
experiment/: CMakeLists.txt
experiment/coroutines/: CMakeLists.txt
test/: CMakeLists.txt  run_all_tests.sh  testing_utilities.h
test/LRU_cache/: CMakeLists.txt  LRU_cache_solution1.cpp  LRU_cache_solution2.cpp  LRU_cache_solution3.cpp  LRU_cache_solution4.cpp  test_LRU_cache.cpp
test/allocate_books/: CMakeLists.txt  allocate_books_solution1.cpp  allocate_books_solution2.cpp  allocate_books_solution3.cpp  allocate_books_solution4.cpp  test_allocate_books.cpp
test/backspace_string_compare/: CMakeLists.txt  backspace_string_compare_solution1.cpp  backspace_string_compare_solution2.cpp  backspace_string_compare_solution3.cpp  backspace_string_compare_solution4.cpp  test_backspace_string_compare.cpp
test/binary_gap/: CMakeLists.txt  binary_gap_solution1.cpp  binary_gap_solution2.cpp  binary_gap_solution3.cpp  binary_gap_solution4.cpp  test_binary_gap.cpp
test/buy_sell_stocks/: CMakeLists.txt  buy_sell_stocks_solution1.cpp  buy_sell_stocks_solution2.cpp  test_buy_sell_stocks.cpp
test/buy_sell_stocks_2/: CMakeLists.txt  buy_sell_stocks_2_solution1.cpp  buy_sell_stocks_2_solution2.cpp  test_buy_sell_stocks_2.cpp
test/buy_sell_stocks_4/: CMakeLists.txt  buy_sell_stocks_4_solution0.cpp  buy_sell_stocks_4_solution1.cpp  buy_sell_stocks_4_solution2.cpp  test_buy_sell_stocks_4.cpp
test/can_jump/: CMakeLists.txt  can_jump2_solution1.cpp  can_jump3_solution1.cpp  can_jump4_solution1.cpp  can_jump_solution1.cpp  can_jump_solution1_1.cpp  can_jump_solution2.cpp  test_can_jump.cpp
test/capitalize_words_first_letter/: CMakeLists.txt  capitalize_words_first_letter_solution1.cpp  capitalize_words_first_letter_solution2.cpp  capitalize_words_first_letter_solution3.cpp  capitalize_words_first_letter_solution4.cpp  test_capitalize_words_first_letter.cpp
test/clone_list_random_pointer/: CMakeLists.txt  clone_list_random_pointer_solution1.cpp  clone_list_random_pointer_solution2.cpp  test_clone_list_random_pointer.cpp
test/coin_change/: CMakeLists.txt  coin_change_solution1.cpp  coin_change_solution2.cpp  coin_change_solution3.cpp  coin_change_solution4.cpp  coin_change_solution5.cpp  test_coin_change.cpp
test/coin_pickup/: CMakeLists.txt  coin_pickup_solution1.cpp  coin_pickup_solution2.cpp  coin_pickup_solution3.cpp  coin_pickup_solution4.cpp  test_coin_pickup.cpp
test/common/: CMakeLists.txt  algorithm.cpp  algorithm.h  binary_tree.h  hash_pair.h  list.h  test_utils.h
test/count_bits/: CMakeLists.txt  count_bits_solution1.cpp  count_bits_solution2.cpp  count_bits_solution3.cpp  count_bits_solution4.cpp  test_count_bits.cpp
test/count_numbers_conforming_bitmask/: CMakeLists.txt  count_numbers_conforming_bitmask_solution1.cpp  count_numbers_conforming_bitmask_solution2.cpp  count_numbers_conforming_bitmask_solution3.cpp  count_numbers_conforming_bitmask_solution4.cpp  test_count_numbers_conforming_bitmask.cpp
test/cycle_in_list/: CMakeLists.txt  cycle_in_list_solution1.cpp  cycle_in_list_solution2.cpp  cycle_in_list_solution3.cpp  cycle_in_list_solution4.cpp  test_cycle_in_list.cpp
test/decode_string/: CMakeLists.txt  decode_string_solution1.cpp  decode_string_solution2.cpp  decode_string_solution3.cpp  decode_string_solution4.cpp  test_decode_string.cpp
test/delete_duplicates_list/: CMakeLists.txt  delete_duplicates_list_solution1.cpp  delete_duplicates_list_solution2.cpp  test_delete_duplicates_list.cpp
test/dice_rolls/: CMakeLists.txt  dice_rolls_solution1.cpp  dice_rolls_solution2.cpp  dice_rolls_solution3.cpp  test_dice_rolls.cpp
test/distance_between_nodes_in_tree/: CMakeLists.txt  distance_between_nodes_in_tree_solution1.cpp  distance_between_nodes_in_tree_solution2.cpp  distance_between_nodes_in_tree_solution3.cpp  distance_between_nodes_in_tree_solution4.cpp  test_distance_between_nodes_in_tree.cpp
test/exponentiation/: CMakeLists.txt  exponentiation_solution1.cpp  exponentiation_solution2.cpp  exponentiation_solution3.cpp  exponentiation_solution4.cpp  exponentiation_solution5.cpp  test_exponentiation.cpp
test/find_k_closest_in_array/: CMakeLists.txt  find_k_closest_in_array_solution1.cpp  find_k_closest_in_array_solution2.cpp  find_k_closest_in_array_solution3.cpp  find_k_closest_in_array_solution4.cpp  my_lower_bound.h  test_find_k_closest_in_array.cpp
test/find_odd_occurring_element/: CMakeLists.txt  find_odd_occurring_element_solution1.cpp  find_odd_occurring_element_solution2.cpp  find_odd_occurring_element_solution3.cpp  find_odd_occurring_element_solution4.cpp  find_odd_occurring_element_solution5.cpp  test_find_odd_occurring_element.cpp
test/find_repeated_number_n_divided_3_times/: CMakeLists.txt  find_repeated_number_n_divided_3_times_solution1.cpp  find_repeated_number_n_divided_3_times_solution2.cpp  find_repeated_number_n_divided_3_times_solution3.cpp  find_repeated_number_n_divided_3_times_solution4.cpp  test_find_repeated_number_n_divided_3_times.cpp
test/first_positive_missing/: CMakeLists.txt  first_positive_missing_solution1.cpp  first_positive_missing_solution2.cpp  first_positive_missing_solution3.cpp  first_positive_missing_solution4.cpp  test_first_positive_missing.cpp
test/first_unique_char/: CMakeLists.txt  first_unique_char_solution1.cpp  first_unique_char_solution2.cpp  first_unique_char_solution3.cpp  first_unique_char_solution4.cpp  test_first_unique_char.cpp
test/five_starts_seller/: CMakeLists.txt  five_starts_seller_solution1.cpp  five_starts_seller_solution2.cpp  five_starts_seller_solution3.cpp  five_starts_seller_solution4.cpp  test_five_starts_seller.cpp
test/gas_station/: CMakeLists.txt  gas_station_solution1.cpp  gas_station_solution2.cpp  gas_station_solution3.cpp  gas_station_solution4.cpp  test_gas_station.cpp
test/greatest_right/: CMakeLists.txt  greatest_right_bruteforce.cpp  (+3 more)
(+908 files in other folders)
