cmake_minimum_required(VERSION 2.8 FATAL_ERROR)


add_executable(test_capitalize_words_first_letter test_capitalize_words_first_letter.cpp)
target_link_libraries(test_capitalize_words_first_letter ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT}) 
target_include_directories(test_capitalize_words_first_letter PUBLIC ${GTEST_INCLUDE_DIRS})

