cmake_minimum_required(VERSION 3.0 FATAL_ERROR)


add_executable(test_count_numbers_conforming_bitmask test_count_numbers_conforming_bitmask.cpp)
target_link_libraries(test_count_numbers_conforming_bitmask ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT}) 
target_include_directories(test_count_numbers_conforming_bitmask PUBLIC ${GTEST_INCLUDE_DIRS})

