cmake_minimum_required(VERSION 3.0 FATAL_ERROR)


add_executable(test_distance_between_nodes_in_tree test_distance_between_nodes_in_tree.cpp)
target_link_libraries(test_distance_between_nodes_in_tree ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT}) 
target_include_directories(test_distance_between_nodes_in_tree PUBLIC ${GTEST_INCLUDE_DIRS})

