cmake_minimum_required(VERSION 3.0 FATAL_ERROR)


add_executable(test_find_repeated_number_n_divided_3_times test_find_repeated_number_n_divided_3_times.cpp)
target_link_libraries(test_find_repeated_number_n_divided_3_times ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT}) 
target_include_directories(test_find_repeated_number_n_divided_3_times PUBLIC ${GTEST_INCLUDE_DIRS})

