cmake_minimum_required(VERSION 3.0 FATAL_ERROR)


#add_executable(test_random_points_in_circle test_random_points_in_circle.cpp)
#target_link_libraries(test_random_points_in_circle ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT}) 
#target_include_directories(test_random_points_in_circle PUBLIC ${GTEST_INCLUDE_DIRS})

